modify inst module